[gd_scene load_steps=4 format=3 uid="uid://bnrmiqvhay643"]

[ext_resource type="Script" path="res://Scenes/gate/gates_up.gd" id="1_8ghds"]
[ext_resource type="PackedScene" uid="uid://wl8fixk3i852" path="res://Scenes/Effects/room_light.tscn" id="2_3u4n5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4qfw1"]
size = Vector2(16, 16)

[node name="gates_up" type="Area2D" groups=["clear"]]
script = ExtResource("1_8ghds")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 10
shape = SubResource("RectangleShape2D_4qfw1")

[node name="reset_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Room_light" parent="." instance=ExtResource("2_3u4n5")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="reset_timer" to="." method="_on_reset_timer_timeout"]
